# GoogleCampus_Midterm

./: .env  .gitignore  README.md  pyproject.toml
apps/backend/: README.md
apps/backend/app/: README.md  app.py  config.py  main.py  prompts.py
apps/backend/app/routes/: README.md  analysis_routes.py
apps/backend/app/services/: README.md  analysis_service.py
apps/frontend/: README.md  index.html  style.css
